# scindex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  compiler.py  lookup.py  pyproject.toml  scindex.md  scindex.yaml
.github/ISSUE_TEMPLATE/: correction.md  suggestion.md
docs/_templates/: ADR-template.md  requirements-template.md
docs/architecture/: ADR-M0130-monorepo_structure.md
docs/requirements/: REQ-C0220-evaluation_tool.md  REQ-I0210-scindex_cli.md
examples/01-iot-hub/: README.md
examples/01-iot-hub/adrs/: ADR-D0510-01_device_comm_protocol.md  ADR-P0320-01_operating_sys.md
examples/01-iot-hub/requirements/: REQ-C0110-01_aut_climate_control.md  REQ-I0420-01_temp_sensor_ingest.md
examples/01-iot-hub/standards/: G0210-01_firmware_code_format.md
examples/01-iot-hub/tests/: TST-C0110-01_verify_climate_control_rule.md
src/scindex/: cli.py  compiler.py
src/scindex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
